log
Thu Oct 22 19:02:07 UTC 2020: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:37:11: error: ‘heap’ undeclared (first use in this function); did you mean ‘heap_’?
    return heap;
           ^~~~
           heap_
heap.c:37:11: note: each undeclared identifier is reported only once for each function it appears in
heap.c:36:10: error: unused variable ‘heap_’ [-Werror=unused-variable]
   Heap * heap_= (Heap*) malloc(sizeof(Heap));
          ^~~~~
heap.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Thu Oct 22 19:02:19 UTC 2020: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
ca2702b
Thu Oct 22 19:08:16 UTC 2020: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 0/70
8a5a6cc
Thu Oct 22 19:09:06 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3609e86
Thu Oct 22 19:09:43 UTC 2020: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
d272bd8
Thu Oct 22 20:15:57 UTC 2020: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
8fd3eb1
Thu Oct 22 20:32:34 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
9312e35
Thu Oct 22 20:38:07 UTC 2020: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|3
total_score: 10/70
9c54227
Thu Oct 22 20:39:13 UTC 2020: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|3
total_score: 10/70
d626e63
Thu Oct 22 20:46:17 UTC 2020: 
 heap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 35/70
23e6f4a
Thu Oct 22 20:48:15 UTC 2020: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 45/70
8729e7b
Thu Oct 22 20:50:58 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
081a952
Thu Oct 22 21:02:17 UTC 2020: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
857c3fa
